# Project-OpaNoid

./: Acknowledgements.md  Codes of conduct.md  Contributor guidelines.md  Readme.md
Hardware/: Print settings.md
Hardware/STL files/: Belt binder.stl
Hardware/STL files/Abdomen/: 150mm rail.stl  Abdominal base.stl  Horizontal mount part 2.stl  Horizontal mount.stl  Raspberry Pi mount.stl  Vertical mount part 2.stl  Vertical mount.stl  Waist part 1.stl  Waist part 2.stl  Waist part 3.stl  Waist pin holder.stl  Waist pin.stl
Hardware/STL files/Joint/: Joint pin holder.stl  Joint pin.f3d  Joint pin.stl  Joint spacer.stl  Narrow joint bracket.stl  Wide joint bracket.stl
Hardware/STL files/Leg/: 140mm rail.stl  160mm rail.stl  Left pelvis attachment bracket.stl  Right pelvis attachment bracket.stl  Rotation component-actual size.stl  Rotation component.stl
Hardware/STL files/Leg/Ankle/: Ankle bracket part 2.stl  Ankle pin holder.stl  Ankle pin.stl  Ankle spacer.stl  Left ankle bracket part 1.stl  Right ankle bracket part 1.stl
Hardware/STL files/Leg/Foot/: Foot holding pin.stl  Left foot part 1.stl  Left foot part 2.stl  Left foot part 3.stl  Left foot part 4.stl  RIght foot part 1.stl  (+3 more)
Hardware/STL files/Pelvis/: 182.5mm rail.stl  250mm rail.stl  Middle pelvis pin.stl  Outer pelvis pin.stl  Outer pin holder.stl  Pelvis bracket part 1.stl  Pelvis bracket part 2.stl  Pelvis rail.stl  Pelvis servo module stiffener.stl  Rear pelvis pin.stl  Rear pin holder.stl
Hardware/STL files/Servo modules/: Dual servo module part 1.stl  Left dual servo module part 2.stl  Right dual servo module part 2.stl  Servo module transmission gear.stl  Single servo module type 1 part 1.stl  Single servo module type 1 part 2.stl  Single servo module type 2 part 1.stl  Single servo module type 2 part 2.stl  Transmission gear holder.stl
Hardware/STL files/Upper torso/: 112.5mm rail.stl  115mm rail.stl  132.5mm rail.stl  95mm rail.stl  Arm attachment point.stl  Arm rotation component.stl  Chest base.stl  Chest piece.stl  Hand.stl  Horizontal rotation plate part 1.stl  Horizontal rotation plate part 2.stl  Left vertical rotation component.stl  Right vertical rotation component.stl  Servo spacer.stl  Shoulder part 1.stl  Shoulder part 2.stl  Upper body base.stl
Software/: Software readme.md  Software setup.md  Software_readme.md  ~$ftware setup.md
Software/Kinect motion builder/: BodyBasics-WPF.csproj  MainWindow.xaml.cs
Software/Kinect motion builder/Properties/: Resources.Designer.cs  Settings.Designer.cs
Software/Raspberry Pi/: Opanoid_controller.c  Reset.c
Software/project_opanoid/: CMakeLists.txt  package.xml
Software/project_opanoid/config/: r2d2_head_turner.cpp
Software/project_opanoid/launch/: basic_walk_old.launch  display.launch  main_DQN.launch  spawn_urdf_DQN.launch  world.launch
Software/project_opanoid/src/: walk.cpp  walk.py
Software/project_opanoid/urdf/: opanoid_full.urdf
Software/project_opanoid/walk_data/: data_log_full_legs_walk.txt
Software/project_opanoid_package/config/: servos.yaml
Software/project_opanoid_package/launch/: basic_walk.launch  display_full.launch  gazebo.launch
Software/project_opanoid_package/src/: walk.cpp
Software/project_opanoid_package/urdf/: opanoid_full.urdf  opanoid_full_2.urdf  opanoid_sketch.urdf
(+2 files in other folders)
